Course Basic Info Updated by 0x470579d16401a36BF63b1428eaA7189FBdE5Fee9

--- a/src/course.yaml
+++ b/src/course.yaml
@@ -79,6 +79,7 @@ topics:
       This chapter explains
       1) Different types of tokes
       2) Advantages of Tokenization
+    explanations: tokenization.yaml
   - title: Lending and Credit
     key: lending-and-credit
     details: |
