Course Basic Info Updated by 0x470579d16401a36BF63b1428eaA7189FBdE5Fee9

--- a/src/explanations/tokenization.yaml
+++ b/src/explanations/tokenization.yaml
@@ -63,3 +63,25 @@
     disclose whether or not users' funds were backed 1:1 at all times. As an
     educated blockchain user, we should be aware whenever we are depositing
     custody of our assets or tokens to anyone else.
+- key: need-for-tokenization
+  shortTitle: Background
+  details: >-
+    Traditional finance models and tools work well for developed nations, but
+    they leave a lot to be desired when it comes 
+
+    to offering compensation for new ways of collaboration or providing access
+    to a global financial system for everyone. 
+
+    Let's take a look at some of the areas where traditional finance falls
+    short:
+
+
+    Compensation - With the traditional ways of compensating employees through
+    salaries or stocks, many organizations are now finding it difficult to keep
+    up with the changing demands of the workforce. With more people working
+    remotely and for fewer hours each week, the rigid financial structures of
+    traditional companies are no longer able to keep up. However, in the world
+    of cryptocurrency, one can simply write a few lines of code to create and
+    distribute tokens based on whatever rules they want. This flexibility has
+    already led to some incredible changes in the way we compensate team members
+  title: 'Need for Tokenization '
