Course Basic Info Updated by 0x470579d16401a36BF63b1428eaA7189FBdE5Fee9

--- a/src/explanations/tokenization.yaml
+++ b/src/explanations/tokenization.yaml
@@ -74,11 +74,38 @@
     traditional finance falls short:
 
 
-    Compensation - With the traditional ways of compensating employees through
-    salaries or stocks, many organizations are now finding it difficult to keep
-    up with the changing demands of the workforce. With more people working
-    remotely and for fewer hours each week, the rigid financial structures of
-    traditional companies are no longer able to keep up. However, in the world
-    of cryptocurrency, one can simply write a few lines of code to create and
+    ### Compensation
+
+    With the traditional ways of compensating employees through salaries or
+    stocks, many organizations are now finding it difficult to keep up with the
+    changing demands of the workforce. With more people working remotely and for
+    fewer hours each week, the rigid financial structures of traditional
+    companies are no longer able to keep up. However, in the world of
+    cryptocurrency, one can simply write a few lines of code to create and
     distribute tokens based on whatever rules they want. This flexibility has
-    already led to some incredible changes in the way we compensate team members
+    already led to some incredible changes in the way we compensate team
+    members. Compensation by traditional finance fails in the following
+    scenarios
+
+    1) **Global Projects/Companies** - With the rise of globalization, we now
+    have teams of individuals who work together across timezones and may never
+    meet or talk to one another in person. In many cases, these types of remote
+    communities or projects are the most effective ones. For these projects,
+    local compensation rules are outdated and they want new and flexible ways of
+    compensating the project members.
+
+    2) **Open Source Projects** - Open source projects can reach a great level
+    of success, but the people who put work into them often don't reap any
+    benefits when the project does well. The reason is that it's tricky to come
+    up with a standard business model for open source projects. If you're
+    thinking of contributing to an open source project, it's crucial to think
+    about how you can monetize it. Financially stable projects can allow team
+    members to work on things they're passionate about full time with
+    like-minded people - which sounds amazing, right?
+
+    3) **Flexible Roles and Responsibilities** - With organizations' outcomes in
+    terms of revenue and profits becoming more unpredictable than ever, it's
+    important that compensation models and software can adapt to assign equity
+    to all contributors in a flexible way based on the work they actually
+    perform. This allows for a more accurate division of rewards and motivates
+    people to continue putting in their best effort even when things are tough.
