Course Basic Info Updated by 0x470579d16401a36BF63b1428eaA7189FBdE5Fee9

--- a/src/explanations/tokenization.yaml
+++ b/src/explanations/tokenization.yaml
@@ -109,3 +109,53 @@
     to all contributors in a flexible way based on the work they actually
     perform. This allows for a more accurate division of rewards and motivates
     people to continue putting in their best effort even when things are tough.
+
+
+    ### Global Financial System
+
+    Developed countries offer residents more reliable financial opportunities
+    than many other parts of the world. For example, people in developing
+    countries may not have access to reliable investing tools that can protect
+    their money from things like hyper inflation. Traditional Finance doesn't
+    provide the following investment tools to everyone globally
+
+    1) **Stock Investing** - When it comes to investing, some of the most stable
+    companies to put your money into are ones like Google, Apple, Amazon, and
+    Tesla. Even with Tesla's stock prices rising by over 10,000%, many people
+    have held onto their shares - but not everyone has that opportunity. There
+    are plenty of people globally who don't have access to these modern growth
+    stocks.
+
+    2) **Vesture Investing** - Venture investing opportunities have been mostly
+    limited to people with a net worth of a million dollars or earning upwards
+    of $200,000 per year. Traditional investing offers no opportunity for small
+    retail investors to get in on the action. Public companies have mostly gone
+    through their exponential growth lifecycle, so retail investors get access
+    to opportunities that have normalized growth.
+
+    3) **Commodity investing** - investing in commodities like gold, silver, and
+    copper - should be available to everyone. However, many countries lack the
+    financial infrastructure needed for citizens to invest in these commodities.
+    In addition, inflation rates in some countries can be as high as 200%, which
+    reduces the purchasing power of citizens by half each year.
+
+
+    ### Business to Business Partnerships
+
+    B2B partnerships can be very complex, involving legal contracts that can
+    take months to finalize. Even the simplest contract can cost a business
+    upwards of $10,000. This can make it very difficult for small businesses to
+    collaborate and work towards common goals.
+
+
+    In the crypto world, however, you often see projects arranging token swaps.
+    This creates a common financial interest for both parties, making it much
+    easier to work together.
+
+
+    ### Lack of Liquidity
+
+    Lack of liquidity is one of the biggest challenges that retail investors
+    face when it comes to investing in real estate or small businesses.
+    Tokenization helps to overcome this by fractionalizing ownership and
+    providing innovative ways to create liquidity.
