Course Basic Info Updated by 0x470579d16401a36BF63b1428eaA7189FBdE5Fee9

--- a/src/explanations/tokenization.yaml
+++ b/src/explanations/tokenization.yaml
@@ -90,10 +90,13 @@
 
     ### Lack of Liquidity
 
-    Lack of liquidity is one of the biggest challenges that retail investors
-    face when it comes to investing in real estate or small businesses.
-    Tokenization helps to overcome this by fractionalizing ownership and
-    providing innovative ways to create liquidity.
+    Lack of liquidity is a significant challenge for retail investors when it
+    comes to investing in items such as real estate or small businesses.
+    However, tokenization helps to overcome this by fractionalizing ownership
+    and providing innovative ways to create liquidity. Some participants of the
+    industry estimate that tokenization could lead to unlocking trillions of
+    euros that are currently in illiquid assets, which would vastly increase the
+    volumes of trade.
 - key: token-types
   title: Token Types
   shortTitle: Token Types
