--- a/src/explanations/tokenization.yaml
+++ b/src/explanations/tokenization.yaml
@@ -162,3 +162,15 @@
     disclose whether or not users' funds were backed 1:1 at all times. As an
     educated blockchain user, we should be aware whenever we are depositing
     custody of our assets or tokens to anyone else.
+- key: benefits-of-tokenization
+  shortTitle: Benefits
+  details: >-
+    1) **Transparency**  - Transparency is one of the key benefits that
+    blockchain technology can bring to the financial markets. By enhancing
+    information recording and sharing, blockchain can help create a more
+    transparent market environment, with data that is more accurate and
+    reliable. This in turn can help boost investor confidence and make the
+    markets more efficient. Additionally, the decentralized nature of blockchain
+    can help reduce the risks of fraud and corruption, as well as improve
+    auditability.
+  title: Benefits of Tokenization
